css/main.css
/*
 * @package       mds
 * @copyright     (C) Copyright 2021 Ryan Rhode, All rights reserved.
 * @author        Ryan Rhode, ryan@milliondollarscript.com
 * @version       2021.01.05 13:41:52 EST
 * @license       This program is free software; you can redistribute it and/or modify
 *        it under the terms of the GNU General Public License as published by
 *        the Free Software Foundation; either version 3 of the License, or
 *        (at your option) any later version.
 *
 *        This program is distributed in the hope that it will be useful,
 *        but WITHOUT ANY WARRANTY; without even the implied warranty of
 *        MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *        GNU General Public License for more details.
 *
 *        You should have received a copy of the GNU General Public License along
 *        with this program;  If not, see http://www.gnu.org/licenses/gpl-3.0.html.
 *
 *  * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
 *
 *        Million Dollar Script
 *        A pixel script for selling pixels on your website.
 *
 *        For instructions see README.txt
 *
 *        Visit our website for FAQs, documentation, a list team members,
 *        to post any bugs or feature requests, and a community forum:
 *        https://milliondollarscript.com/
 *
 */

.mds-container .clear {
	clear: both;
}

body.mds-container {
	background-color: #ffffff;
	color: #000;
	margin: 0;
	font-size: 13px;
	font-weight: normal;
	font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
}

body.mds-container.wp {
	overflow: auto;
}

.mds-container .outer {
	margin: 0;
	padding: 0;
	border: 0;
	width: 100%;
}

.mds-container .inner {
	margin: 0 auto;
	width: auto;
}

.mds-container .container::before,
.mds-container .container::after {
	content: "";
	clear: both;
	display: table;
}

.mds-container .container {
	width: calc(100% - 40px);
	margin: 0 auto;
	padding: 20px;
}

.mds-container.wp .container {
	padding: 0;
}

.mds-container.wp .logged-in {
	padding:20px !important;
}

/*
Heading bar
*/
.mds-container .heading {
	background: #fff;
	max-width: 1000px;
	margin: 10px auto;
	display: flex;
	justify-content: center;
	align-content: space-between;
	flex-wrap: wrap;
	align-items: center;
}

.mds-container .logo img {
	max-width: 100%;
}

.mds-container .slogan {
	padding: 20px;
	text-align: center;
	width: auto;
	font-weight: bold;
}

/*
controls the look and feel of the 'pixels-sold/available' box:
*/
iframe[class^='statsframe'] {
	overflow: hidden;
	border: none;
	padding: 0;
	margin: 0;
}

.stats-container {
	width: 149px;
}

.stats-container .status_body {
	margin: 0;
	background-color: transparent;
	overflow: hidden;
}

.stats-container .status {
	border: 1px solid #efefef;
	background-color: #fff;
	border-radius: 6px;
	width: auto;
	height: auto;
	padding: 8px;
	font-size: 12px;
	text-align: center;
	line-height: 16px;
}

.stats-container .status_text {
	font-weight: bold;
	color: #000;
}

/* Menu bar */
.mds-container .menu-bar,
.mds-container .users-menu-bar {
	background-color: #f6f6f6;
	min-height: 53px;
	width: 100%;
	margin: 0 auto;
	padding: 0;
	display: flex;
	justify-content: center;
	align-content: center;
	flex-wrap: wrap;
}

.mds-container .menu-bar a,
.mds-container .users-menu-bar a {
	background-color: #eaeaea;
	border-radius: 6px;
	text-align: center;
	color: #008cd4;
	font-weight: bold;
	font-size: 14px;
	padding: 6px;
	min-width: 100px;
	min-height: 30px;
	line-height: 30px;
	margin: 2px;
	text-decoration: none;
}

.mds-container .menu-bar a:hover,
.mds-container .users-menu-bar a:hover {
	color: #6000cd;
}

/*
Grid iframe
*/
.mds-container iframe[class^='gridframe'],
.mds-container .grid-container .grid-inner {
	overflow: hidden;
	border: none;
	padding: 0;
	margin: 0 auto;
	display: block;
	max-width: 100%;
}

/*
Footer
*/
.mds-container .footer {
	padding: 10px;
	text-align: center;
}

/*
Ads list page
*/

.mds-container .list {
	width: 100%;
	border: none;
	font-family: Arial, sans-serif;
	font-size: small;
	color: #000;
}

.mds-container .list a {
	color: #0000ff;
}

.mds-container .table-row {
	display: table;
	width: 100%;
	table-layout: fixed;
}

.mds-container .list-cell,
.mds-container .list-heading {
	display: table-cell;
	overflow: hidden;
	white-space: nowrap;
	text-overflow: ellipsis;
	padding: 5px;
	width: 180px;
}

.mds-container .table-row {
	border-bottom: 2px solid rgba(255, 255, 255, 0.5);
	border-collapse: collapse;
}

.mds-container .table-row.header {
	background-color: #dddddd;
	color: #000;
	font-weight: bold;
}

.mds-container input[type='button'],
.mds-container input[type='submit'] {
	border-radius: 6px;
	background-color: #efefef;
	color: #008cd4;
	font-weight: bold;
	font-size: 14px;
	padding: 6px;
	text-align: center;
	cursor: pointer;
	margin: 4px;
}

.mds-container select {
	background: #ffffff;
	color: #000000;
	border: 1px solid #909090;
	font-size: 11px;
	font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
	font-weight: normal;
}

.mds-container .outer-container {
	background-color: rgba(255, 255, 255, 0);
	color: #000000;
	border-color: #efefef;
	border-style: solid;
	padding: 10px;
	overflow: visible;
}

.mds-container .free {
	height: 10px;
	width: 10px;
	border: 1px solid #DFDFDF;
}

.mds-container a.big_link {
	font-size: 20px;
	font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
	font-weight: normal;
	color: #6699cc;
}

.mds-container .big_button {
	font-size: 18px;
}

.mds-container .sold {
	height: 10px;
	width: 10px;
}

.mds-container .selected {
	height: 10px;
	width: 10px;
	border: 2px solid #33CC00;
	background-color: #FFFFFF;
	color: #000;
}

.mds-container .reserved {
	height: 10px;
	width: 10px;
}

.mds-container h1 {
	font-size: 20px;
	font-family: Verdana, Arial, Helvetica, sans-serif;
	font-weight: bold;
	line-height: 26px;
	color: #000000;
}

.mds-container h2 {
	font-size: 16px;
	font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
	font-weight: bold;
	line-height: 18px;
	color: #000000;
}

.mds-container h3 {
	font-size: 14px;
	font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
	font-weight: bold;
	line-height: 14px;
	color: #000000;
}

.mds-container p {
	font-size: 13px;
	font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
	font-weight: normal;
	color: #000000;
}

.mds-container table,
.mds-container tr,
.mds-container td {
	font-size: 13px;
	font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
	font-weight: normal;
	color: #000000;
}

.mds-container form {
	margin: 0;
}

.mds-container input {
	font-size: 11px;
	font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
	font-weight: normal;
	color: #000000;
}

.mds-container textarea {
	height: 230px;
	width: 660px;
	font-size: 11px;
	font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
	font-weight: normal;
	color: #000000;
	background: #fff;
}

.mds-container a {
	font-size: 14px;
	font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
	font-weight: normal;
	color: #6699cc;
}

.mds-container .fancy_heading {
	border-style: solid;
	border-color: #99CCCC;
	border-width: 1px;
	padding: 3px;
	font-size: 14px;
	font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
	font-weight: bold;
	background-image: linear-gradient(to bottom, #e0f7ff, #FFFFFF);
}

/*
Dynamic forms
This set of styles control the display of dynamic forms - (Ad form).
*/

.mds-container #dynamic_form,
.mds-container table.dynamic_form {
	background-color: #d9d9d9;
	color: #000;
	width: 100%;
	border-bottom-width: 0;
}

/*
TD.dynamic_form_field -
The name of the field (field label which on the left side)
*/
.mds-container td.dynamic_form_field {
	background-color: #efefef;
	color: #000;
	font-weight: bold;
	width: 120px;
	font-family: Arial, sans-serif;
	font-size: 12px;

}

.mds-container td.dynamic_form_2_col_field {
	background-color: #ffffff;
	color: #000;
}

/*
#dynamic_form TD.dynamic_form_value
The value of the field (on the right from the field label)
*/
.mds-container td.dynamic_form_value {
	background-color: #ffffff;
	color: #000;
}

.mds-container .dynamic_form_image_label {
	font-weight: bold;
	font-family: Arial, sans-serif;
}

.mds-container .dynamic_form_file_label {
	font-weight: bold;
}

/* Date field */
.mds-container select.dynamic_form_date_style {
	background-color: #ffffff;
	color: #000;
}

.mds-container input.dynamic_form_date_style {
	background-color: #ffffff;
	color: #000;
}

/* Other fields */
.mds-container input.dynamic_form_checkbox_style {
	background-color: #ffffff;
	color: #000;
}

.mds-container input.dynamic_form_radio_style {
	background-color: #ffffff;
	color: #ffffff;
}

.mds-container input.dynamic_form_text_style {
	background-color: #ffffff;
	color: #000;
	max-width: 100%;
}

.mds-container textarea {
	background-color: #ffffff;
	color: #000;
	max-width: 100%;
}

.mds-container select {
	background-color: #ffffff;
	color: #000;
	max-width: 100%;
}

.mds-container table.ad_data {
	background-color: #ffffff;
	border-width: 0;
}

.mds-container .error_msg_label {
	color: #FF0000;
	font-weight: bold;
}

.mds-container .ok_msg_label {
	border-style: solid;
	border-color: #33CC00;
	border-width: 2px;
}

/* Ads list */
.mds-container #pixels_list,
.mds-container table.pixels_list {
	background-color: #d9d9d9;
	margin: 0 auto;
}

.mds-container #pixels_list td.list_data_cell {
	font-family: "Arial", sans-serif;
	font-size: 10pt;
	color: #000000;
}

.mds-container #pixels_list .today {
	color: #ff0000;
	font-weight: bold;

}

.mds-container #pixels_list .days_ago {
	color: #339900;
	font-weight: bold;
}

.mds-container #pixels_list .days_ago2 {
	color: #C0C0C0;
	font-weight: bold;
}

.mds-container #pixels_list .list_header_cell {
	font-size: 10pt;
	margin: 0;
	padding: 3px;
	font-weight: bold;
}

.mds-container .tooltip-source {
	visibility: hidden;
}

.mds-container .publish-grid {
	display: flex;
	justify-content: center;
	width:100%;
	max-width:100%;
	min-width:100%;
}

.mds-container .publish-grid map,
.mds-container .publish-grid img {
	max-width: 100%;
	height: auto;
}

.mds-container .publish-grid::after {
	content: "";
	clear: both;
	display: table;
}

.mds-container .flex-container {
	margin: 10px auto;
	clear: both;
	display: flex;
	justify-content: center;
	align-content: space-between;
	flex-flow: column wrap;
	align-items: flex-start;
	max-width: 100%;
}

.mds-container .flex-row {
	clear: both;
	display: flex;
	flex-flow: row wrap;
	flex: 1 1 auto;
	max-width: 100%;
}

.mds-container .flex-cell {
	padding: 5px;
	max-width: calc(100% - 10px);
}

.mds-container area {
	cursor: pointer;
}

.ajax-loader {
	width:100%;
	min-height:16px;
	background:url(../images/ajax-loader.gif) no-repeat center center;
}

